--- a/src/components/Task.css
+++ b/src/components/Task.css
@@ -8,3 +8,15 @@
     color: #eee;
     align-items: center;
 }
+
+.task-title {
+    cursor: pointer;
+}
+
+.remove-task-button {
+    background-color: rgb(17, 17, 17);
+    border: none;
+    font-size: 16px;
+    color: chartreuse;
+    cursor: pointer;   
+}
