create the  mode to delete task

--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -5,9 +5,16 @@
     border-radius: 35px;
     width: 100%;
     font-size: 16px;
-    color: #444;
+    color: rgb(12, 11, 11);
     font-weight: bold;
     cursor: pointer;
     border: 20px;
+    -webkit-transition: all 150ms ease-in-out;
+    transition: all 150ms ease-in-out;
 
 }
+
+.button:hover {
+    box-shadow: 0 0 10px 0 #34dbdb inset, 0 0 10px 4px #39db34;
+  }
+  
