--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #222
+  background-color: rgba(113, 117, 95, 0.418)
 }
 
 code {
