--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: rgba(17, 12, 12, 0.253)
+  background-color: rgb(132, 132, 145)
 }
 
 code {
